--- a/wrangler.toml
+++ b/wrangler.toml
@@ -15,6 +15,10 @@ class_name = "ClaraAgent"
 tag = "v1"
 new_sqlite_classes = ["ClaraAgent"]
 
+[vars]
+ACCOUNTS_URL = "https://companion-accounts.micaiah-tasks.workers.dev"
+
 # Secrets (set via Cloudflare dashboard):
 # - ANTHROPIC_API_KEY
 # - TELEGRAM_BOT_TOKEN
+# - TELEGRAM_WEBHOOK_SECRET
